# FIT_CTU

./: .gitignore  .gitignore.orig  .gitignore_BACKUP_19448  .gitignore_BASE_19448  .gitignore_REMOTE_19448  .install.sh  AnalyseResults.py  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.orig  CarDetector.py  Client.py  Colormode.h  Communication_UDP.py  Config.py  Connection.cpp  Connection.h  Data.cpp  Data.h  Data.py  DateTime.py  Doxyfile  Doxyfile.in  DrivingControl.py  DrivingControlAdvanced.py  Evaluation.py  Flight.py  FlightSystem.py  Frontend.cpp  Frontend.h  Fuzzy.py  GUIDELINES.org  Generator.py  HelperFunctions.py  LICENSE  ListOfMusic.txt  ListOfSound.txt  Makefile  Marshalling.py  Object.py  (+31 more)
01/: homework_01_B191.ipynb  main.py  parties.csv  people.csv
01/.ipynb_checkpoints/: homework_01_B191-checkpoint.ipynb
02/: evaluation.csv  main.py  results.csv
02/.ipynb_checkpoints/: homework_01_B191-checkpoint.ipynb  homework_02_B191-checkpoint.ipynb
03/: homework_03_B191.ipynb  main.py
03/.ipynb_checkpoints/: homework_03_B191-checkpoint.ipynb
04/: main.py
04/.ipynb_checkpoints/: homework_04_B191-checkpoint.ipynb
1.iterace/: README.md  analyticka_dokumentace.md  analyticka_dokumentace.tex
2.iterace/: Navrh_architektury.md  Navrh_architektury.tex  README.md
ACM/: EasyDjikstraProblem_Djikstra.cpp  EasyDjikstraProblem_Djikstra.txt  KoolKonstructions_SegmentTree.cpp  KoolKonstructions_SegmentTree.txt  README.MD  TopologicalSorting_OrderingTask.txt
ACM/Data Structures/: SquareRootBlocks_DominoPrinciple.cpp  SquareRootBlocks_DominoPrinciple.txt
ACM/Dynamic Programming/: DynamicProgramming_Enigma.cpp  DynamicProgramming_FireFireFire.cpp  DynamicProgramming_FireFireFire.txt  DynamicProgramming_ToEuropeToEurope.cpp
ACM/Graphs and Trees/: BFS_Friends.cpp  BFS_Friends.txt  BellmanFord_wormholes.cpp  BellmanFord_wormholes.txt  Jarnik-Prim_Freckles.cpp  Jarnik-Prim_Freckles.txt  LCA_LCASQ.cpp  LCA_LCASQ.txt  TopologicalSorting_OrderingTask.cpp
ACM/Math and Geometry/: HeronsFormula+BinarySearch_BACP2018J.cpp  SieveOfEratosthenes_RepeatingGoldbachs.cpp  SieveOfEratosthenes_RepeatingGoldbachs.txt
ACM/Other/: RunningMedian_CookieSelection.cpp  RunningMedian_CookieSelection.txt  TwoPointers_IceCreamSamples.cpp  TwoPointers_IceCreamSamples.txt  lcs.cpp
ACM/Strings/: KMP_ExtendToPalindrome.cpp  KMP_ExtendToPalindrome.txt  Trie_AdaAndIndexing.cpp  Trie_AdaAndIndexing.txt
AG1/: README.md  Results.md
AG1/DU_1/: main.cpp  zadani.md
AG1/DU_2/: main.cpp  zadani.md
AG1/DU_3/: main.cpp  zadani.md
BEZ/: README.md
BEZ/2/: bez_ukol_1b.cpp  bez_ukol_2b.cpp
BEZ/3/: compilation_and_start.txt  decrypt.cpp  encrypt.cpp
BEZ/4/: decrypt  encrypt  main.cpp  main_decrypt.cpp  privKey.pem  pubKey.pem  test
BEZ/5/: main.cpp
BEZ/6/: main.cpp
BIG/: README.md  docker-compose.yml  kibana_objects.json
BIG/Documentation/: Documentation.tex
BIG/spark/: docker-compose.yml  spark.df
DU_1/: main.cpp  zadani.txt
DU_2/: main.cpp  zadani.txt
DU_3/: main.c
DU_5/: main.c  zadani.txt
DU_6/: zadani.txt
DU_7/: main.c
DU_8/: zadani.txt
EP1/: README.md
EP1/1st round (input, output and real numbers)/: area.C  chess.C  dd.C  dresy.C  parlament.C  souvisla.C  usecky.C
EP1/2nd round (optimization)/: anagram.C  samples.C  triangle.C  video.C  vybrana.C
EP1/3rd round (recursion)/: ceiling.C  images.C  polish.C  quadtree.C  zavazad.C
EP1/4th round (dynamic programming)/: gallery.C  money.C  pig.C
EP1/5th round (geometry)/: intersect.C  ponork.C  transmit.C
FITtemplates/: FITthesis.cls
FlightsTree/: README.md
NTU/: README.md
NTU/CZ4013/: Communication_UDP.py  Config.py  Marshalling.py
NTU/CZ4015/: Evaluation.py  Generator.py  input_analysis.py  main.py  results.p
OSY/: README.md  Results.md
OSY/OSY_1/: main.cpp  test.inc  zadani.md  zadani_cz.txt
OSY/OSY_2/: Makefile  ccpu.cpp  common.h  solution.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test_op.cpp  test_op.h  zadani.md  zadani_cz.txt
PA1/: LICENSE  README.md  Results.md
PA1/DU_1/: main.c  (+1 more)
PA2/: README.md  Results.md
PA2 - Recipe Manager/: .install.sh  zadani.txt
PST/: README.md
RC_Version/: CarDetector.py  DrivingControl.py  model.py  raspberry_control.py  read_ZED.py  test.py  test_single_image.py  zed_data_and_imgs.py
RG/: CHANGELOG.md  CMakeLists.txt  README.md  setup.sh
Recipe_Manager/: .install.sh  CMakeLists.txt  Doxyfile  Makefile  README.md  prohlaseni.txt
Recipe_Manager/lib/libpq/: jconfig.h  pg_config.h  pg_config_manual.h  xf86drm.h
Recipe_Manager/src/: main.cpp
Recipe_Manager/src/Backend/: Connection.h  Data.cpp  Recipe.h
Recipe_Manager/src/Frontend/: Frontend.cpp  Frontend.h  ScreenBeverages.cpp  ScreenLogin.h  ScreenLoginPassword.h  ScreenUserMenu.cpp  ScreenUserMenu.h
Report/: report.aux  report.dvi  report.out  report.tex  report.toc
SI1 - Rogue Game/: Doxyfile.in  ListOfMusic.txt  README.md  domain_model_creator.sh
Thesis - Autonomous Car Chasing/: .gitignore  README.md
VWM/: README.md
VWM - FlightsTree/: README.md
VZD/: README.MD
ZNS/: Data.py  Fuzzy.py  README.md  UI.py  main.py  url.txt
ZNS_DATA/: AVERAGE_SALARY_DOLLARS_PER_YEAR.csv  FERTILITY_RATE_OVER_TIME.csv  POPULATION_WITH_TERTIARY_EDUCATION_LESS.csv  POVERTY_RATE.csv  RENEWABLE_ENERGY_SOURCES_PERCETANGE_OVER_TIME.csv  TAX_ON_SERVICES.csv  TEACHER_SALARY_YEARLY.csv
Zaverecna_Zprava/: jahoda_zprava.aux  jahoda_zprava.out  zprava_jahoda.aux  zprava_jahoda.tex
ctuthesis/: ctuth-pkg.tex
datasets/: README.md
docs/: main_page.md  namespaces.hpp
doxygen/: doxy-boot.js
dual-task network/: get_kmeans.py  test_single_image_prev.py
include/: common.hpp  pg_config.h
jahodpa1/: output
kareludp/: Spust_server_pro_ulohu_c_2~  kareludp-client
libpqxx-5.0/: config.status  configure
lua/: characters.lua
src/: AnalyseResults.py  CarDetector.py  Connection.cpp  DrivingControl.py  DrivingControlAdvanced.py  Frontend.h  PurePursuitAlgorithm.py  Screen.cpp  ScreenIngredients.h  ScreenLogin.cpp  User.cpp  User.h  VizualizeDrivingPath.py  main.cpp  synchronous_mode.py
(+1147 files in other folders)
